# pyspark-pipeline-composer

./: Makefile  README.md  pyproject.toml
.cursor/rules/: testing-discipline.mdc
.cursor/skills/delta-lake-with-pyspark/: SKILL.md
.cursor/skills/protobuf-with-spark/: SKILL.md
examples/: README.md  hourly_weather_summary.py  run_hourly_weather_summary.sh
examples/dashboard/: rain-sensor-dashboard.canvas.tsx
examples/datasets/hourly_weather_summary_delta/: .part-00000-2d02c408-053c-452a-a8dd-a84e6eff326f-c000.snappy.parquet.crc  .part-00001-5fe0a67e-dc35-4e9f-8cc1-ad84a950f612-c000.snappy.parquet.crc  .part-00002-45d941ca-67d9-4f13-af12-3ffcb3c75bb7-c000.snappy.parquet.crc  .part-00003-6f6c3c06-d77b-4a72-92ae-c292788e2f79-c000.snappy.parquet.crc  .part-00004-0a408cdf-14e8-4c3b-b33f-0f10454d735e-c000.snappy.parquet.crc  .part-00005-9f60e8c6-596f-44cd-a5d5-f4d94447a0dc-c000.snappy.parquet.crc  .part-00006-f7796362-1f40-4a91-bd9d-3fbf1626a800-c000.snappy.parquet.crc  .part-00007-c525ef7c-3df3-4897-92db-1870fda56723-c000.snappy.parquet.crc  .part-00008-151b0130-1ab0-421e-8d47-d24fce00ee6d-c000.snappy.parquet.crc  (+19 more)
pyspark_pipeline_composer/: __init__.py  pipeline.py
pyspark_pipeline_composer/sinks/: base.py  delta.py
pyspark_pipeline_composer/sources/: base.py  delta.py
pyspark_pipeline_composer/transforms/: base.py  fn.py  protobuf.py  sql.py
tests/: conftest.py  test_pipeline.py
tests/test_sinks/: test_delta_sink.py
tests/test_sources/: test_delta_source.py
tests/test_transforms/: test_fn.py  test_protobuf.py  test_sql.py
(+302 files in other folders)
